# ipfix-analytics

./: .dockerignore  .gitignore  CLICKHOUSE.md  CLICKHOUSE_EXPORT_SETUP.md  DEPLOYMENT.md  Dockerfile  Dockerfile.generated  NOTES.md  PYTHON_DEPLOY.md  README.md  clickhouse_export_pipeline.py  create-minio-block.py  deploy.py  git-clone.sh  ipfix_pipeline.py  prefect.yaml  pyproject.toml  test-minio-access.py
ca/0a027f9461/: metadata.json
ca/0a027f9461/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/: overview_stats.sql  protocol_breakdown.sql  recent_flows.sql  top_destinations.sql  top_ports.sql  top_talkers_by_bytes.sql  traffic_by_hour.sql  traffic_matrix.sql
dbt/models/staging/: stg_ipfix_flows.sql
evidence/.evidence/customization/: .profile.json
evidence/pages/: +layout.svelte  index.md
evidence/sources/ipfix/: connection.yaml  hourly_traffic.sql  overview_stats.sql  protocol_breakdown.sql  recent_flows.sql  top_destinations.sql  top_ports.sql  top_talkers_by_bytes.sql  traffic_matrix.sql
scripts/: README.md  build-ipfix-pipeline-image.sh  ipfix-export.sql  setup-ssh.py
