[project]
name = "ipfix-big-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.37.38",
    "dbt-clickhouse>=1.8.6",
    "dbt-core>=1.8.7",
    "dbt-duckdb>=1.9.0",
    "dbt-postgres>=1.8.2",
    "gradio>=4.26.0",
    "jupyter>=1.1.1",
    "minio>=7.2.7",
    "pandas>=2.0.3",
    "prefect>=2.20.23",
    "prefect-aws>=0.4.20",
    "pyarrow>=17.0.0",
    "python-dotenv>=1.0.1",
]
